--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1,28 +1,28 @@
 :root {
-    --primary-color: #0300bb;
-    --secondary-color: #007bbd;
-    --tertiary-color: #6b8dff;
-    --wrong-color: #c40000;
-    --right-color: #00e025;
+    --primary-color: #020eaa;
 }
 
+body {
+    font-family: Helvetica, Arial, sans-serif;
+}
 
 #container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    left: 30%;
+    top: 20%;
     width: 500px;
     height: 500px;
-    border: 10px double var(--primary-color);
+    border: 15px double var(--primary-color);
+    border-radius: 5px;
 }
-#startTimer {
+#startTime {
     background-color: var(--primary-color);
     margin-left: 33%;
     padding: 15px 32px;
     font-size: 20px;
     color: white;
 }
-#questions {
+#questionsBlock {
     margin: 20px;
 }
 
@@ -30,7 +30,7 @@
     float: right;
 }
 
-#return {
+#goBack {
     background-color: var(--primary-color);
     position: relative;
     padding: 10px;
@@ -61,11 +61,11 @@ button {
 }
 
 textarea {
-    width: 80%;
-    margin: 15px;
+    width: 90%;
+    margin: 20px;
 }
 
-#submit {
+#Submit {
     background-color: var(--primary-color);
     margin-left: 33%;
     padding: 15px 32px;
@@ -76,7 +76,6 @@ textarea {
 label {
     margin-right: 10px;
 }
-
 input {
     margin-bottom: 20px;
     width: 50%;
@@ -98,12 +97,13 @@ li {
 
 #createDiv {
     margin-top: 20px;
-    border-top: 1px solid lightgray;
+    border-top: 5px solid lightgray;
 }
 
 
 /* Media Query max-width: 786px */
 @media screen and (max-width: 786px) {
+
     body {
         max-width: 786px;
     }
@@ -116,30 +116,31 @@ li {
     a {
         margin-left: 20%;
     }
-    #return {
-    
+
+    #goBack {
         position: relative;
         left: 55%;
     }
 
     #clear {
-    
         position: relative;
         right: 5%;
-    
     }
 }
 
 /* Media Query max-width: 640px */
 @media screen and (max-width: 640px) {
+
     body {
         min-width: 640px;
     }
+
     #container {
         position: absolute;
         left: 10%;
     }
+
     a {
         margin-left: 10%;
-        }
+    }
 }
